- Update GameFOX site settings for use with new GameFAQs settings
  page
- Update QuickWhois for new profiles
- QuickPost now checks for errors after posting the message
- Prevent long profile fields from stretching QuickWhois
- QuickPost now catches short topic titles before sending the post
  to the server
- Add old GameFOX Standard Default stylesheet with the old QuickPost
  look

Version 0.5.5.9                                             2008-06-22
======================================================================
- Fix quick post issues in Firefox 2

Version 0.5.5.8                                             2008-06-21
======================================================================
- (chrome/content/css/wide-layout.css): Allow board user navigation to
  be properly aligned to the right
- Update GameFOX board settings for use with new GameFAQs settings
  page
- Remove custom signature separator option
- Add pre-signature field, option to add newline before signature
- Truncate signatures at 2 lines. No other restrictions.

Version 0.5.5.7                                             2008-06-17
======================================================================
- Made the quick post form pretty
- Decode HTML entities when handling signatures and quotes
- Update the double click action on the active messages list for the
  new layout

Version 0.5.5.6                                             2008-02-03
======================================================================
- Fixed user highlighting, since I apparently broke it last release.
  Whoops!

Version 0.5.5.5                                             2008-01-30
======================================================================
- Firefox 3: This extension now provides secure updates.
- Linux: There are no longer any permission errors when adding CSS
  to the profile
- CSS developers: Highlighted posts now have a class