@@ -15,6 +15,7 @@ Version 0.5.5.10
   to the server
 - Add old GameFOX Standard Default stylesheet with the old QuickPost
   look
+- Add "Grab From GameFAQs" button to retrieve signature from GameFAQs
 
 Version 0.5.5.9                                             2008-06-22
 ======================================================================
